# aws-cloudwatch-logger

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  settings.py
services/: container.py  parse_args.py  utils.py
services/aws/: logger.py  resources.py  session.py
